fixed contrast in progressbar

--- a/static/style.css
+++ b/static/style.css
@@ -1735,7 +1735,6 @@ button {
     margin: 12px auto;
     border-radius: 0px;
     width: 90%;
-    box-shadow: inset rgba(0, 0, 0, 0.05) 0 0 4px 0px;
     background: #e3e9f0;
     position: relative;
 }
@@ -1757,10 +1756,9 @@ button {
     top: 5px;
     bottom: 0;
     right: 0;
-    color: rgb(0, 0, 0);
     margin: auto;
     width: fit-content;
-    font-weight: 500px;
+    font-weight: bold;
 }
 
 
